# pdf-converter

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  no-ocr.yaml
src/pdf_converter/: __init__.py  _ssl_fix.py  cli.py  config.py  exceptions.py  pipeline.py
src/pdf_converter/generators/: __init__.py  image_handler.py  styles.py  table_builder.py  word_generator.py
src/pdf_converter/ir/: __init__.py  report.py  schema.py
src/pdf_converter/parsers/: __init__.py  base.py  docling_parser.py  factory.py
tests/unit/: test_config.py  test_ir_schema.py  test_parser.py  test_pipeline.py  test_report.py  test_word_generator.py
